--- a/public/assets/adoremos/css/estilo1.css
+++ b/public/assets/adoremos/css/estilo1.css
@@ -17,7 +17,7 @@
 	text-align:center;
 	}
 
-#topo{	
+header {	
 	background-color:#000;
 	width:auto;
 	height:185px;
@@ -84,13 +84,13 @@
 		background-color:#000;
 		
 		}
-	#cssmenu{
+	#navbar{
 		margin-left:450px;
 		margin-top:-70px;
 		}	
-#cssmenu ul,
-#cssmenu li,
-#cssmenu a {
+#navbar ul,
+#navbar li,
+#navbar a {
   list-style: none;
   margin: 0;
   padding: 0;
@@ -98,7 +98,7 @@
   line-height: 1;
   font-family: 'Lato', sans-serif;
 }
-#cssmenu {
+#navbar {
   border: 0px solid #133e40;
   background-color:#FF0;
   -webkit-border-radius: 5px;
@@ -108,7 +108,7 @@
   border-radius: 5px;
   width: 600px;
 }
-#cssmenu ul {
+#navbar ul {
   zoom: 1;
   background: -moz-linear-gradient(top, #FFFF00 0%, #666666 100%);
   background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #666), color-stop(100%, #66666));
@@ -124,21 +124,21 @@
   -o-border-radius: 5px;
   border-radius: 5px;
 }
-#cssmenu ul:before {
+#navbar ul:before {
   content: '';
   display: block;
 }
-#cssmenu ul:after {
+#navbar ul:after {
   content: '';
   display: table;
   clear: both;
 }
-#cssmenu li {
+#navbar li {
   float: left;
   margin: 0 5px 0 0;
   border: 1px solid transparent;
 }
-#cssmenu li a {
+#navbar li a {
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
   -ms-border-radius: 5px;
@@ -151,7 +151,7 @@
   border: 1px solid transparent;
   font-size: 16px;
 }
-#cssmenu li.active {
+#navbar li.active {
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
   -ms-border-radius: 5px;
@@ -160,7 +160,7 @@
   border: 1px solid #000000;
   color:#FFF;
 }
-#cssmenu li.active a {
+#navbar li.active a {
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
   -ms-border-radius: 5px;
@@ -174,7 +174,7 @@
   box-shadow: inset 0 5px 10px #133e40;
   color:#FFF;
 }
-#cssmenu li:hover {
+#navbar li:hover {
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
   -ms-border-radius: 5px;
@@ -183,7 +183,7 @@
   border: 1px solid #FFFF00;
   color:#FFF;
 }
-#cssmenu li:hover a {
+#navbar li:hover a {
   -webkit-border-radius: 5px;
   color:#FFF;
   -moz-border-radius: 5px;
