--- a/public/assets/adoremos/css/coin-slider-styles.css
+++ b/public/assets/adoremos/css/coin-slider-styles.css
@@ -13,13 +13,24 @@
 .grid{
 	margin-top: 333px;
 }
+
 .texto{
 	position: relative;
-	background-color: #000000;
+	background-color: #080808;
 	text-align: center;
 	height: 83px;
+	border-radius: 0 0 4px 4px;
+	border-top: 2px solid #000;
 
 }
+.col-md-4{
+	margin-bottom: 4px;
+}
+.col-md-4 img{
+	border-radius: 4px 4px 0 0;
+	width: 100%;
+}
+
 .texto span{
 	color:#FFF200;
 }
@@ -27,4 +38,13 @@
 	text-align: left;
 	padding:3px;
 	color:#fff;
+}
+footer{
+	height: 200px;
+	position: relative;;
+}
+footer .container{
+	background-color: #080808;
+	height: 100%;
+	border-radius:4px 4px 0 0;	 
 }
