--- a/public/assets/adoremos/css/coin-slider-styles.css
+++ b/public/assets/adoremos/css/coin-slider-styles.css
@@ -42,9 +42,21 @@
 footer{
 	height: 200px;
 	position: relative;;
+	background-color: #080808;
 }
 footer .container{
-	background-color: #080808;
 	height: 100%;
 	border-radius:4px 4px 0 0;	 
 }
+form#Contato{
+    position: relative;
+	width: 100%;	 
+	 
+}
+form#Contato input,form#Contato textarea{
+	width: 300px;
+}
+form#Contato textarea{
+	 height: 290px;
+}
+ 
